--- a/i18n/fr/translation.json
+++ b/i18n/fr/translation.json
@@ -54,11 +54,9 @@
         "insertStart": "Insérer au début",
         "copyChapter": "Copier le chapitre",
         "addChapter": "Ajouter un nouveau chapitre",
-
         "addText": "Ajouter une page texte",
         "addVideo": "Ajouter une page vidéo",
         "addAudio": "Ajouter une page audio",
-
         "addChoice": "Ajouter une évaluation QCM",
         "addDragAndDrop": "Ajouter une évaluation Drag & Drop",
         "addReorder": "Ajouter une évaluation Reorder",
@@ -66,7 +64,6 @@
         "addDropdown": "Ajouter une évaluation Liste Déroulante",
         "addCustom": "Ajouter une évaluation personnalisée"
     },
-
     "global": {
         "open": "Ouvrir",
         "cancel": "Annuler",
@@ -294,6 +291,7 @@
             "certificateScoreHint": "N'est pas pris en compte si le nombre de badge pour obtenir l'attestation est supérieur à 0",
             "chapterLabel": "Label des chapitres",
             "chapterDuration": "Durée des chapitres (en minutes)",
+            "languageSelection": "Sélectionnez la langue",
             "plugin": {
                 "title": "Plugin | Plugins",
                 "script": "Fichier de script",
