chores: fix tinymce placeholder

--- a/i18n/en/translation.json
+++ b/i18n/en/translation.json
@@ -95,7 +95,8 @@
         "objective": "Objective",
         "name": "Name",
         "file": "File",
-        "refresh": "Refresh"
+        "refresh": "Refresh",
+        "type": "Type here..."
     },
     "validation": {
         "yes": "YES, DELETE",
