feat: unlockable content

--- a/i18n/en/translation.json
+++ b/i18n/en/translation.json
@@ -228,6 +228,7 @@
             "presentationPlaceholder": "Enter badge presentation",
             "icon": "Badge icon"
         },
+        "unlock": "Unlock conditions",
         "content": {
             "text": "Content",
             "summary": "Summary",
