--- a/i18n/it/translation.json
+++ b/i18n/it/translation.json
@@ -119,7 +119,7 @@
     "badge": {
         "supported": "File suportato: SVG",
         "select": "Seleziona un file",
-        "conditions": "Condizioni per guadagnare il badge",
+        "conditions": "Condizioni",
         "add": "Aggiungi una condizione",
         "selectIcon": "Seleziona un'icona",
         "defaultIcons": "Icone predefinite",
@@ -223,7 +223,6 @@
         "badge": {
             "text": "Impostazioni del badge",
             "updateIcon": "Aggiorna icona",
-            "obtention": "Condizioni per ottenere il badge",
             "presentation": "Presentazione del badge",
             "presentationPlaceholder": "Inserisci la presentazione del badge",
             "icon": "Icona del badge"
