--- a/i18n/fr/translation.json
+++ b/i18n/fr/translation.json
@@ -223,6 +223,7 @@
         "badge": {
             "text": "Paramètres du badge",
             "updateIcon": "Modifier l'icône",
+            "obtention": "Conditions d'obtention du badge",
             "presentation": "Présentation du badge",
             "presentationPlaceholder": "Saisissez une présentation du badge",
             "icon": "Icône du badge"
